# drip

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
dashboards/: candles.json
deployments/dev/candles/: candles.yaml
deployments/dev/kind/: create_cluster.sh  install_grafana.sh  install_kafka.sh  install_kafka_ui.sh  install_risingwave.sh
deployments/dev/kind/manifests/: grafana-values.yaml  kafka-ui-all-in-one.yaml
deployments/dev/technical_indicators/: technical_indicators.yaml
deployments/dev/trades/: Build-Multi-Input-Stream-Crypto-App.code-workspace
docker/: candles.Dockerfile  technical-indicators.Dockerfile  technical_indicators.Dockerfile  trades.Dockerfile
scripts/: deploy.sh
services/candles/: pyproject.toml  settings.env
services/candles/src/candles/: config.py  main.py
services/technical_indicators/: pyproject.toml  settings.env
services/technical_indicators/src/technical_indicators/: candle.py  config.py  main.py  query.sql
services/trades/: pyproject.toml  settings.env
services/trades/src/trades/: config.py  kraken_api.py  kraken_rest_api.py  kraken_websocket_api.py  main.py
