[project]
name = "candles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rishav sapahia", email = "rishavsapahia@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
